[gd_scene load_steps=17 format=2]

[ext_resource path="res://graphics/menu_idea.png" type="Texture" id=1]
[ext_resource path="res://graphics/haley_hat.png" type="Texture" id=2]
[ext_resource path="res://font/font1.tres" type="DynamicFont" id=3]
[ext_resource path="res://StyleHeartBig.tres" type="StyleBox" id=4]
[ext_resource path="res://TextHover.gd" type="Script" id=5]
[ext_resource path="res://MainMenu.gd" type="Script" id=6]
[ext_resource path="res://ScreenTransition.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/ptwht/playtime.ttf"

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://font/ptwht/playtime.ttf"

[sub_resource type="DynamicFont" id=9]
size = 96
use_filter = true
font_data = SubResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="menu_idea" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false

[node name="haley_pic" type="Sprite" parent="."]
position = Vector2( 380.398, 539.558 )
scale = Vector2( 0.571982, 0.571982 )
z_index = 5
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 70.0
margin_top = 49.0
margin_right = 688.0
margin_bottom = 167.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 0
text = "Haley Heartbeat"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 323.089
margin_top = 171.864
margin_right = 453.089
margin_bottom = 218.864
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "and the"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 40.9667
margin_top = 213.008
margin_right = 723.967
margin_bottom = 291.008
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Forest of Enchanted Things"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_left = 300.172
margin_top = 797.103
margin_right = 340.172
margin_bottom = 837.103
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "Play"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 112.61
margin_top = 792.517
margin_right = 356.61
margin_bottom = 928.517
focus_neighbour_right = NodePath("../Button2")
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.176471, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.634766, 0.109812, 0.404693, 1 )
text = "Play"
flat = true
align = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 430.423
margin_top = 790.942
margin_right = 725.423
margin_bottom = 926.942
focus_neighbour_left = NodePath("../Button")
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.176471, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.634766, 0.109812, 0.404693, 1 )
text = "Options"
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" parent="." instance=ExtResource( 7 )]

[node name="FocusGrab" type="Button" parent="."]
margin_left = 342.417
margin_top = 1029.24
margin_right = 354.417
margin_bottom = 1049.24
focus_neighbour_left = NodePath("../Button")
focus_neighbour_top = NodePath("../Button")
focus_neighbour_right = NodePath("../Button")
focus_neighbour_bottom = NodePath("../Button")
focus_next = NodePath("../Button")
focus_previous = NodePath("../Button")
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_button"]
[connection signal="pressed" from="Button2" to="." method="_on_opt"]
